Fixed some other UI bugs

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-    <title>WhatsApp</title>
+    <title>The Dancho</title>
 
 
     <meta property="og:title" content="The Dancho">
     <!--<img src="images/logo.png" height="512" width="512"/>-->
     <meta property="og:image" content="images/logo.png">
-    <meta property="og:site_name" content="WhatsApp.com">
+    <meta property="og:site_name" content="thedancho.com">
 
     <meta name="description"
           content="WhatsApp Messenger: More than 1 billion people in over 180 countries use WhatsApp to stay in touch with friends and family, anytime and anywhere. WhatsApp is free and offers simple, secure, reliable messaging and calling, available on phones all over the world.">
@@ -24,7 +24,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="#1BA691">
 
-    <link id="favicon" rel="shortcut icon" href="https://whatsapp.com/favicon.png" type="image/png">
+    <link id="favicon" rel="shortcut icon" href="images/logo.png" type="image/png">
 
     <!--<meta name="google-site-verification" content="Cusl-1G4lInGd7xZ55vzhKEF4l3O11umoaqQ-RxTf2w">-->
 
@@ -57,7 +57,7 @@
             <h1 class="block__title" style="color: #ff3f6a">
                 Simple & Reliable<br>SHOUTcast Radio App</h1>
             <div class="block__body">
-                With Jukebox-Shoutcast, you'll get fast, simple and reliable radio stations in <span
+                With <b>Jukebox Shoutcast</b>, you'll get fast, simple and reliable radio stations in <span
                     class="nowrap">100s of languages,</span> all over the world.
             </div>
 
