Added support for Phone screen and on air download by sms

--- a/index.html
+++ b/index.html
@@ -33,15 +33,17 @@
 
     <script type="text/javascript" src="WhatsApp_files/jquery-1.12.2.min.js"></script>
     <style>
-        .page-header__logo{
+        .page-header__logo {
             background-image: url("images/logo.png");
         }
-        .hero-phone{
+
+        .hero-phone {
             background-image: url("images/mainshot.png");
         }
-        body{
+
+        body {
             padding-top: 0;
-            padding:0;
+            padding: 0;
             margin: 0px;
             background-color: white;
         }
@@ -51,7 +53,7 @@
 <!--
 
 -->
-<div class="section section--hero" style="height: 100vh">
+<div class="section section--hero" style="height: 100vh; background-color: white; color: darkslategrey;">
     <div class="block block--hero">
         <div class="block__inner">
             <h1 class="block__title" style="color: #ff3f6a">
@@ -61,8 +63,11 @@
                     class="nowrap">100s of languages,</span> all over the world.
             </div>
 
-            <a href="https://www.whatsapp.com/download/" class="button button--primary button--s block__action">Download
-                now</a>
+            <a href="http://jukebox.thedancho.com/NwKI/ZW6ytzSsRE"
+               class="button button--primary button--s block__action">Download Now</a>
+            <br>
+            <!--<a href="https://itunes.apple.com/us/app/jukebox-shoutcast/id1233822279?mt=8"-->
+               <!--class="button button&#45;&#45;primary button&#45;&#45;s block__action">iPhone</a>-->
 
             <div class="block__hint" style="color: red">
                 <!--<sup>*</sup> Data charges may apply. Contact your provider for details.-->
@@ -71,26 +76,23 @@
             <div class="block__action actions">
                 <ul>
                     <li>
-                        <a style="color: #ff3f6a;" href="https://play.google.com/store/apps/details?id=com.zilideus.jukebox">
+                        <a style="color: #ff3f6a;"
+                           href="https://play.google.com/store/apps/details?id=com.zilideus.jukebox">
                             <img src="WhatsApp_files/icon-android.svg" alt="" style="color: #ff3f6a;">
                             Android </a>
                     </li>
                     <li>
-                        <a style="color: #ff3f6a;" href="https://itunes.apple.com/us/app/jukebox-shoutcast/id1233822279?mt=8">
-                            <img src="WhatsApp_files/icon-iphone.svg" alt="" >
+                        <a style="color: #ff3f6a;"
+                           href="https://itunes.apple.com/us/app/jukebox-shoutcast/id1233822279?mt=8">
+                            <img src="WhatsApp_files/icon-iphone.svg" alt="">
                             iPhone </a>
                     </li>
                     <li>
                         <br>
-                        <!--<a href="https://www.whatsapp.com/download">-->
-                            <!--<img src="WhatsApp_files/icon-desktop.svg" alt="">-->
-                            <!--Mac or Windows PC </a>-->
                     </li>
-                    <li><br>
-
-                        <!--<a href="https://www.whatsapp.com/wp/">-->
-                            <!--<img src="WhatsApp_files/icon-wp.svg" alt="">-->
-                            <!--Windows Phone </a>-->
+                    <li>
+                        <br>
+                        <br>
                     </li>
                 </ul>
 
@@ -103,225 +105,5 @@
 
 </div>
 
-<!--<div class="section section&#45;&#45;features">-->
-    <!--<div class="section__inner">-->
-        <!--<div class="feature feature&#45;&#45;dark feature&#45;&#45;calls section__item">-->
-            <!--<div class="feature__inner">-->
-                <!--<h3 class="feature__intro">-->
-                    <!--WhatsApp Voice and Video Calls </h3>-->
-                <!--<h1 class="feature__title">-->
-                    <!--Speak Freely </h1>-->
-                <!--<div class="feature__text">-->
-                    <!--With voice calls, you can talk to your friends and family for <span class="nowrap">free<sup>*</sup>,</span>-->
-                    <!--even if they're in another country. And with <span class="nowrap">free<sup>*</sup></span> video-->
-                    <!--calls, you can have face-to-face conversations for when voice or text just isn't enough. WhatsApp-->
-                    <!--voice and video calls use your phone's Internet connection, instead of your cell plan's voice-->
-                    <!--minutes, so you don't have to worry about expensive calling charges.-->
-                <!--</div>-->
-
-                <!--&lt;!&ndash; <div class="feature__hint">-->
-                    <!--<sup>*</sup> Data charges may apply. Contact your provider for details.                </div> &ndash;&gt;-->
-            <!--</div>-->
-            <!--<div class="feature__img"></div>-->
-        <!--</div>-->
-        <!--<div class="section__divider"></div>-->
-        <!--<div class="feature feature&#45;&#45;dimmed feature&#45;&#45;security section__item">-->
-
-            <!--<div class="feature__inner">-->
-                <!--<div class="feature__img">-->
-                    <!--<iframe src="WhatsApp_files/security_localized.html" class="feature__embed" frameborder="0"-->
-                            <!--width="272" height="272"></iframe>-->
-                <!--</div>-->
-                <!--<h3 class="feature__intro">-->
-                    <!--End-to-end encryption </h3>-->
-                <!--<h1 class="feature__title">-->
-                    <!--Security by Default </h1>-->
-                <!--<div class="feature__text">-->
-                    <!--Some of your most personal moments are shared on WhatsApp, which is why we built end-to-end-->
-                    <!--encryption into the latest versions of our app. When end-to-end encrypted, your messages and calls-->
-                    <!--are secured so only you and the person you're communicating with can read or listen to them, and-->
-                    <!--nobody in between, not even WhatsApp.-->
-                <!--</div>-->
-            <!--</div>-->
-
-        <!--</div>-->
-    <!--</div>-->
-<!--</div>-->
-
-<!--<div class="section section&#45;&#45;more">-->
-    <!--<a class="button button&#45;&#45;outline" href="https://www.whatsapp.com/features/">Explore features</a>-->
-<!--</div>-->
-
-<!--<footer class="page-footer-container">-->
-    <!--<div class="page-footer -primary">-->
-        <!--<div class="page-footer__inner">-->
-
-            <!--<div class="four -spaced">-->
-                <!--<div class="block block&#45;&#45;footer four__item">-->
-                    <!--<h4 class="block__title">WhatsApp</h4>-->
-                    <!--<div class="block__body">-->
-                        <!--<ul class="list list&#45;&#45;footer">-->
-                            <!--<li class="list__item">-->
-                                <!--<a href="https://www.whatsapp.com/features/" class="list__link">-->
-                                    <!--Features </a>-->
-                            <!--</li>-->
-                            <!--<li class="list__item">-->
-                                <!--<a href="https://www.whatsapp.com/security/" class="list__link">-->
-                                    <!--Security </a>-->
-                            <!--</li>-->
-                            <!--<li class="list__item">-->
-                                <!--<a href="https://www.whatsapp.com/download/" class="list__link">-->
-                                    <!--Download </a>-->
-                            <!--</li>-->
-                            <!--<li class="list__item">-->
-                                <!--<a href="https://web.whatsapp.com/" class="list__link">-->
-                                    <!--WhatsApp Web </a>-->
-                            <!--</li>-->
-                            <!--<li class="list__item">-->
-                                <!--<span class="list__empty"></span>-->
-                            <!--</li>-->
-                        <!--</ul>-->
-                    <!--</div>-->
-                <!--</div>-->
-                <!--<div class="block block&#45;&#45;footer four__item">-->
-                    <!--<h4 class="block__title">Company</h4>-->
-                    <!--<div class="block__body">-->
-                        <!--<ul class="list list&#45;&#45;footer">-->
-                            <!--<li class="list__item">-->
-                                <!--<a href="https://www.whatsapp.com/about/" class="list__link">-->
-                                    <!--About </a>-->
-                            <!--</li>-->
-                            <!--<li class="list__item">-->
-                                <!--<a href="https://www.whatsapp.com/join/" class="list__link">-->
-                                    <!--Careers </a>-->
-                            <!--</li>-->
-                            <!--<li class="list__item">-->
-                                <!--<a href="https://www.whatsappbrand.com/" class="list__link">-->
-                                    <!--Brand Center </a>-->
-                            <!--</li>-->
-                            <!--<li class="list__item">-->
-                                <!--<a href="https://www.whatsapp.com/contact/" class="list__link">-->
-                                    <!--Get in touch </a>-->
-                            <!--</li>-->
-                            <!--<li class="list__item">-->
-                                <!--<a href="https://blog.whatsapp.com/" class="list__link">-->
-                                    <!--Blog </a>-->
-                            <!--</li>-->
-                            <!--<li class="list__item">-->
-                                <!--<span class="list__empty"></span>-->
-                            <!--</li>-->
-                            <!--<li class="list__item">-->
-                                <!--<span class="list__empty"></span>-->
-                            <!--</li>-->
-                        <!--</ul>-->
-                    <!--</div>-->
-                <!--</div>-->
-                <!--<div class="block block&#45;&#45;footer four__item">-->
-                    <!--<h4 class="block__title">Download</h4>-->
-                    <!--<div class="block__body">-->
-                        <!--<ul class="list list&#45;&#45;footer">-->
-                            <!--<li class="list__item">-->
-                                <!--<a href="https://www.whatsapp.com/download/" class="list__link">-->
-                                    <!--Mac/PC </a>-->
-                            <!--</li>-->
-                            <!--<li class="list__item">-->
-                                <!--<a href="https://www.whatsapp.com/android/" class="list__link">-->
-                                    <!--Android </a>-->
-                            <!--</li>-->
-                            <!--<li class="list__item">-->
-                                <!--<a href="https://www.whatsapp.com/appstore/" class="list__link">-->
-                                    <!--iPhone </a>-->
-                            <!--</li>-->
-                            <!--<li class="list__item">-->
-                                <!--<a href="https://www.whatsapp.com/wp/" class="list__link">-->
-                                    <!--Windows Phone </a>-->
-                            <!--</li>-->
-                            <!--<li class="list__item">-->
-                                <!--<a href="https://www.whatsapp.com/ota/" class="list__link">-->
-                                    <!--BlackBerry </a>-->
-                            <!--</li>-->
-                            <!--<li class="list__item">-->
-                                <!--<a href="https://www.whatsapp.com/nokia/" class="list__link">-->
-                                    <!--Nokia </a>-->
-                            <!--</li>-->
-                        <!--</ul>-->
-                    <!--</div>-->
-                <!--</div>-->
-                <!--<div class="block block&#45;&#45;footer four__item">-->
-                    <!--<h4 class="block__title">Help</h4>-->
-                    <!--<div class="block__body">-->
-                        <!--<ul class="list list&#45;&#45;footer">-->
-                            <!--<li class="list__item">-->
-                                <!--<a href="https://faq.whatsapp.com/" class="list__link">-->
-                                    <!--FAQ </a>-->
-                            <!--</li>-->
-                            <!--<li class="list__item">-->
-                                <!--<a href="https://twitter.com/whatsapp" class="list__link">-->
-                                    <!--Twitter </a>-->
-                            <!--</li>-->
-                            <!--<li class="list__item">-->
-                                <!--<a href="https://www.facebook.com/WhatsApp" class="list__link">-->
-                                    <!--Facebook </a>-->
-                            <!--</li>-->
-                            <!--<li class="list__item">-->
-                                <!--<span class="list__empty"></span>-->
-                            <!--</li>-->
-                            <!--<li class="list__item">-->
-                                <!--<span class="list__empty"></span>-->
-                            <!--</li>-->
-                            <!--<li class="list__item">-->
-                                <!--<span class="list__empty"></span>-->
-                            <!--</li>-->
-                        <!--</ul>-->
-                    <!--</div>-->
-                <!--</div>-->
-            <!--</div>-->
-        <!--</div>-->
-    <!--</div>-->
-    <!--<div class="page-footer -secondary">-->
-        <!--<div class="page-footer__inner">-->
-            <!--<div class="four">-->
-                <!--<div class="four__item" dir="auto">-->
-                    <!--2017 © WhatsApp Inc.-->
-                <!--</div>-->
-                <!--<div class="four__item -span3">-->
-                    <!--<a href="https://www.whatsapp.com/legal/" class="page-footer__link">Privacy &amp; Terms</a>-->
-                <!--</div>-->
-            <!--</div>-->
-        <!--</div>-->
-    <!--</div>-->
-<!--</footer>-->
-
-<!--<script>-->
-    <!--var open = false;-->
-    <!--var speed = 200;-->
-
-    <!--function toggle_lng_menu() {-->
-        <!--if (open) {-->
-            <!--$('#lng_open').slideUp(speed);-->
-            <!--$('.header').removeClass('is-expanded');-->
-        <!--} else {-->
-            <!--$('#lng_open').slideDown(speed);-->
-            <!--$('.header').addClass('is-expanded');-->
-        <!--}-->
-        <!--open = !open;-->
-    <!--}-->
-
-    <!--function toggle_menu() {-->
-        <!--$('.page-header__drawer').toggleClass('is-visible');-->
-    <!--}-->
-
-    <!--function toggle_search() {-->
-        <!--$('.page-subheader&#45;&#45;search').slideToggle();-->
-    <!--}-->
-
-    <!--$(function () {-->
-    <!--})-->
-<!--</script>-->
-
-
-<!--</body>-->
-<!--<span class="gr__tooltip"><span class="gr__tooltip-content"></span><i class="gr__tooltip-logo"></i><span-->
-        <!--class="gr__triangle"></span></span>-->
 </body>
 </html>
