Added support for Phone screen and on air download by sms

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 
     <meta property="og:title" content="The Dancho">
     <!--<img src="images/logo.png" height="512" width="512"/>-->
-    <meta property="og:image" content="images/logo.png">
-    <meta property="og:site_name" content="thedancho.com">
+    <meta property="og:image" content="http://thedancho.com/images/logo.png">
+    <meta property="og:site_name" content="http://thedancho.com">
 
     <meta name="description"
-          content="WhatsApp Messenger: More than 1 billion people in over 180 countries use WhatsApp to stay in touch with friends and family, anytime and anywhere. WhatsApp is free and offers simple, secure, reliable messaging and calling, available on phones all over the world.">
+          content="More than 50000 Shoutcast Radio Stations world wide.">
     <meta property="og:description"
-          content="WhatsApp Messenger: More than 1 billion people in over 180 countries use WhatsApp to stay in touch with friends and family, anytime and anywhere. WhatsApp is free and offers simple, secure, reliable messaging and calling, available on phones all over the world.">
+          content="More than 50000 Shoutcast Radio Stations world wide.">
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="IE=9">
