Added support for Phone screen and on air download by sms

--- a/index.html
+++ b/index.html
@@ -50,24 +50,22 @@
     </style>
 </head>
 <body style="height: 100vh;width: 100vw;">
-<!--
 
--->
 <div class="section section--hero" style="height: 100vh; background-color: white; color: darkslategrey;">
     <div class="block block--hero">
         <div class="block__inner">
             <h1 class="block__title" style="color: #ff3f6a">
-                Simple & Reliable<br>SHOUTcast Radio App</h1>
+                The Dancho's <br>SHOUTcast Radio App</h1>
             <div class="block__body">
                 With <b>Jukebox Shoutcast</b>, you'll get fast, simple and reliable radio stations in <span
-                    class="nowrap">100s of languages,</span> all over the world.
+                    class="nowrap">100s of languages,</span> from all over the world.
             </div>
 
             <a href="http://jukebox.thedancho.com/NwKI/ZW6ytzSsRE"
                class="button button--primary button--s block__action">Download Now</a>
             <br>
             <!--<a href="https://itunes.apple.com/us/app/jukebox-shoutcast/id1233822279?mt=8"-->
-               <!--class="button button&#45;&#45;primary button&#45;&#45;s block__action">iPhone</a>-->
+            <!--class="button button&#45;&#45;primary button&#45;&#45;s block__action">iPhone</a>-->
 
             <div class="block__hint" style="color: red">
                 <!--<sup>*</sup> Data charges may apply. Contact your provider for details.-->
