Fucked all and added more pages for write4me and Todo

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
         .hero-phone {
             background-image: url("images/mainshot.png");
         }
+        .hero-phone-write4me {
+            background-image: url("images/mainshot_write4meframe.png");
+        }
 
         body {
             padding-top: 0;
