--- a/new_index.html
+++ b/new_index.html
@@ -96,10 +96,11 @@
 <div class="row grad">
     <div class="col-sm-2"></div>
     <div class="vertical-center col-sm-4">
-        <img class="col-sm-12" src="images/mainshot.png">
+        <img class="col-sm-12" src="images/mainshot_write4meframe.png">
     </div>
     <div class="col-sm-4 vertical-center">
         <div style="color: white">
+
             <p style="font-size: 25px">The Dancho's</p>
             <p style="font-size: 30px"><b>Write4me</b></p>
             <br>
@@ -108,9 +109,70 @@
                 A tool that can write for you.
             </div>
 
+            <br>
+            <a style="color: #FFFFFF;" href="https://play.google.com/store/apps/details?id=com.zilideus.speechtotext">
+                <img src="WhatsApp_files/icon-android.svg" alt="" style="color: #FFFFFF;">
+                Android </a><br>
+            <a style="color: #FFFFFF;" href="https://itunes.apple.com/us/app/write4me-voice-text-convert/id1287175954?mt=8">
+                <img src="WhatsApp_files/icon-iphone.svg" alt="" style="color: white">
+                iPhone </a>
+
         </div>
     </div>
     <div class="col-sm-2"></div>
+</div>
+
+<div class="row grad">
+    <div class="col-sm-2"></div>
+    <div class="col-sm-4 vertical-center">
+        <div style="color: white">
+            <div style="font-size: 34px">The Dancho's</div>
+            <div style="font-size: 34px"><b>ToDo - </b>Quick Task List & Reminder Organizer</div>
+            <br>
+            <div style="font-size: 14px">
+                Keep your self organized and well managed just in seconds.
+            </div>
+            <br>
+            <!--<a style="color: #FFFFFF;" href="https://play.google.com/store/apps/details?id=com.zilideus.jukebox">-->
+                <!--<img src="WhatsApp_files/icon-android.svg" alt="" style="color: #FFFFFF;">-->
+                <!--Android </a><br>-->
+            <a style="color: #FFFFFF;" href="https://itunes.apple.com/us/app/jukebox-shoutcast/id1233822279?mt=8">
+                <img src="WhatsApp_files/icon-iphone.svg" alt="" style="color: white">
+                iPhone </a>
+        </div>
+    </div>
+    <div class="vertical-center col-sm-4">
+        <img class="col-sm-12" src="images/mainshot_todoframe.png">
+    </div>
+    <div class="col-sm-2"></div>
+</div>
+
+
+<div class="row grad">
+    <div class="col-sm-2"></div>
+    <div class="col-sm-4 vertical-center">
+        <div style="color: white">
+            <div style="font-size: 10px"><b><br>Contact us at:</div>
+            <div style="font-size: 25px"><img src="images/phone.png" alt="" style="color: white"> +91 8439740563</div>
+            <div style="font-size: 10px"><b><br>or send mail us at:</div>
+            <div style="font-size: 22px"><b>sandeep.rana011@gmail.com</div>
+            <br>
+            <div style="font-size: 14px">
+                <!--Keep your self organized and well managed just in seconds.-->
+            </div>
+            <br>
+            <!--<a style="color: #FFFFFF;" href="https://play.google.com/store/apps/details?id=com.zilideus.jukebox">-->
+                <!--<img src="WhatsApp_files/icon-android.svg" alt="" style="color: #FFFFFF;">-->
+                <!--Android </a><br>-->
+            <!--<a style="color: #FFFFFF;" href="https://itunes.apple.com/us/app/jukebox-shoutcast/id1233822279?mt=8">-->
+                <!--<img src="WhatsApp_files/icon-iphone.svg" alt="" style="color: white">-->
+                <!--iPhone </a>-->
+        </div>
+    </div>
+    <!--<div class="vertical-center col-sm-4">-->
+        <!--<img class="col-sm-12" src="images/mainshot_todoframe.png">-->
+    <!--</div>-->
+    <!--<div class="col-sm-2"></div>-->
 </div>
 
 
