--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -65,13 +65,13 @@
 
                 <p>We at Company know you care about how your personal information is used and shared, and we take your privacy seriously.  Please read the following to learn more about our Privacy Policy.  <strong>By using or accessing the Services in any manner, you acknowledge that you accept the practices and policies outlined in this Privacy Policy, and you hereby consent that we will collect, use, and share your information in the following ways.</strong></p>
 
-                <p>Remember that your use of Company’s Services is at all times subject to the <a href="http://www.thedancho.com/terms/">Terms of Use</a>, which incorporates this Privacy Policy.  Any terms we use in this Policy without defining them have the definitions given to them in the <a href="http://www.thedancho.com/terms/">Terms of Use</a>.</p>
+                <p>Remember that your use of Company’s Services is at all times subject to the <a href="http://www.thedancho.com/terms.html">Terms of Use</a>, which incorporates this Privacy Policy.  Any terms we use in this Policy without defining them have the definitions given to them in the <a href="http://www.thedancho.com/terms.html">Terms of Use</a>.</p>
 
                 <p><strong>What does this Privacy Policy cover?</strong></p>
 
                 <p>This Privacy Policy covers our treatment of personally identifiable information (“Personal Information”) that we gather when you are accessing or using our Services, but not to the practices of companies we don’t own or control, or people that we don’t manage.  We gather various types of Personal Information from our users, as explained in more detail below, and we use this Personal Information internally in connection with our Services, including to personalize, provide, and improve our services, to allow you to set up a user account and profile, to contact you and allow other users to contact you, to fulfill your requests for certain products and services, and to analyze how you use the Services. In certain cases, we may also share some Personal Information with third parties, but only as described below.</p>
 
-                <p>As noted in the <a href="http://www.thedancho.com/terms/">Terms of Use</a>, we do not knowingly collect or solicit personal information from anyone under the age of 13. If you are under 13, please do not attempt to register for the Services or send any personal information about yourself to us. If we learn that we have collected personal information from a child under age 13, we will delete that information as quickly as possible. If you believe that a child under 13 may have provided us personal information, please contact us at legal@thedancho.com.</p>
+                <p>As noted in the <a href="http://www.thedancho.com/terms.html">Terms of Use</a>, we do not knowingly collect or solicit personal information from anyone under the age of 13. If you are under 13, please do not attempt to register for the Services or send any personal information about yourself to us. If we learn that we have collected personal information from a child under age 13, we will delete that information as quickly as possible. If you believe that a child under 13 may have provided us personal information, please contact us at legal@thedancho.com.</p>
 
                 <p><strong>Will Company ever change this Privacy Policy?</strong></p>
 
@@ -114,7 +114,7 @@
 
                 <p><em>Business Transfers:</em> We may choose to buy or sell assets.  In these types of transactions, customer information is typically one of the business assets that would be transferred.  Also, if we (or our assets) are acquired, or if we go out of business, enter bankruptcy, or go through some other change of control, Personal Information could be one of the assets transferred to or acquired by a third party.</p>
 
-                <p><em>Protection of Company and Others:</em> We reserve the right to access, read, preserve, and disclose any information that we [reasonably] believe is necessary to comply with law or court order; enforce or apply our <a href="http://www.thedancho.com/terms/">Terms of Use</a> and other agreements; or protect the rights, property, or safety of Company, our employees, our users, or others.</p>
+                <p><em>Protection of Company and Others:</em> We reserve the right to access, read, preserve, and disclose any information that we [reasonably] believe is necessary to comply with law or court order; enforce or apply our <a href="http://www.thedancho.com/terms.html">Terms of Use</a> and other agreements; or protect the rights, property, or safety of Company, our employees, our users, or others.</p>
 
                 <p><strong>Is Personal Information about me secure?</strong></p>
 
