--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
             font-weight: 600;
         }
 
+        img{
+            max-width:100%;
+            max-height:100%
+        }
+
     </style>
 </head>
 <body>
