--- a/terms.html
+++ b/terms.html
@@ -7,6 +7,35 @@
 <body>
 <div class="profileSectionText section mainAboutUsText">
     <p>READ THESE TERMS OF USE CAREFULLY BEFORE USING THIS SITE.</p>
+    <h4>Copyright</h4>
+    <p>The Dancho's may, in appropriate circumstances and at its discretion, disable or terminate the accounts of Users
+        who infringe the copyrights or other intellectual property rights of The Dancho's or others in connection with
+        the Website.</p>
+
+    <p>Notice for Claims of Intellectual Property Violations and Agent for Notice</p>
+
+    <p>If you believe that your work has been displayed on the Site in a way that constitutes copyright infringement, or
+        that your copyright rights have otherwise been violated in connection with the Service, please provide The
+        Dancho's’ Copyright Agent with the following information:</p>
+
+    <p>an electronic or physical signature of the person authorized to act on behalf of the owner of the copyright or
+        other intellectual property interest;
+        a description of the copyrighted work or other intellectual property that you claim has been infringed;
+        a description of where the material that you claim is infringing is located on the Website, with enough detail
+        that we may find it on the Website;
+        your address, telephone number, and email address;
+        a statement by you that you have a good faith belief that the disputed use is not authorized by the copyright or
+        intellectual property owner, its agent, or the law; and
+        a statement by you, made under penalty of perjury, that the above information in your notice is accurate and
+        that you are the copyright or intellectual property owner or authorized to act on the copyright or intellectual
+        property owner's behalf.</p>
+    <p>The contact information for The Dancho's’ Agent for Notice of claims is as follows:</p>
+
+    <p>DMCA Agent</p>
+
+    <p>Phone: +91 8439740563</p>
+    <p>Email to: sandeep.rana011@gmail.com</p>
+
     <p>thedancho.com Inc. (referred to as "Secret Vault," "we," "us," "our" and other similar pronouns) makes available
         this Web site and all site-related services (collectively, the "Site") subject to your compliance with the terms
         and conditions set forth in this agreement (the "Agreement"). By using the Site, you agree to be bound by these
