Updated copyright and terms

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             align-items: center;
         }
 
-        body{
+        body {
             font-family: 'Nunito', sans-serif;
             font-weight: 200;
         }
@@ -51,19 +51,22 @@
             background: linear-gradient(to bottom right, #ff03b2, #ff9703); /* Standard syntax */
             font-family: 'Nunito', sans-serif;
         }
-        .extralightfont{
+
+        .extralightfont {
             font-weight: 150;
         }
-        .lightfont{
+
+        .lightfont {
             font-weight: 300;
         }
-        .heavyfont{
+
+        .heavyfont {
             font-weight: 600;
         }
 
-        img{
-            max-width:100%;
-            max-height:100%
+        img {
+            max-width: 100%;
+            max-height: 100%
         }
 
     </style>
@@ -118,7 +121,8 @@
             <a style="color: #FFFFFF;" href="https://play.google.com/store/apps/details?id=com.zilideus.speechtotext">
                 <img src="WhatsApp_files/icon-android.svg" alt="" style="color: #FFFFFF;">
                 Android </a><br>
-            <a style="color: #FFFFFF;" href="https://itunes.apple.com/us/app/write4me-voice-text-convert/id1287175954?mt=8">
+            <a style="color: #FFFFFF;"
+               href="https://itunes.apple.com/us/app/write4me-voice-text-convert/id1287175954?mt=8">
                 <img src="WhatsApp_files/icon-iphone.svg" alt="" style="color: white">
                 iPhone </a>
 
@@ -139,8 +143,8 @@
             </div>
             <br>
             <!--<a style="color: #FFFFFF;" href="https://play.google.com/store/apps/details?id=com.zilideus.jukebox">-->
-                <!--<img src="WhatsApp_files/icon-android.svg" alt="" style="color: #FFFFFF;">-->
-                <!--Android </a><br>-->
+            <!--<img src="WhatsApp_files/icon-android.svg" alt="" style="color: #FFFFFF;">-->
+            <!--Android </a><br>-->
             <a style="color: #FFFFFF;" href="https://itunes.apple.com/us/app/jukebox-shoutcast/id1233822279?mt=8">
                 <img src="WhatsApp_files/icon-iphone.svg" alt="" style="color: white">
                 iPhone </a>
@@ -161,21 +165,23 @@
             <div style="font-size: 25px"><img src="images/phone.png" alt="" style="color: white"> +91 8439740563</div>
             <div style="font-size: 10px"><b><br>or send mail us at:</div>
             <div style="font-size: 22px"><b>sandeep.rana011@gmail.com</div>
+            <div style="font-size: 22px"><b><a style="color: #0e7afe; " href="copyright.html">Copyright</a></div>
+            <div style="font-size: 22px"><b><a style="color: #0e7afe; " href="terms.html">Terms of Use</a></div>
             <br>
             <div style="font-size: 14px">
                 <!--Keep your self organized and well managed just in seconds.-->
             </div>
             <br>
             <!--<a style="color: #FFFFFF;" href="https://play.google.com/store/apps/details?id=com.zilideus.jukebox">-->
-                <!--<img src="WhatsApp_files/icon-android.svg" alt="" style="color: #FFFFFF;">-->
-                <!--Android </a><br>-->
+            <!--<img src="WhatsApp_files/icon-android.svg" alt="" style="color: #FFFFFF;">-->
+            <!--Android </a><br>-->
             <!--<a style="color: #FFFFFF;" href="https://itunes.apple.com/us/app/jukebox-shoutcast/id1233822279?mt=8">-->
-                <!--<img src="WhatsApp_files/icon-iphone.svg" alt="" style="color: white">-->
-                <!--iPhone </a>-->
+            <!--<img src="WhatsApp_files/icon-iphone.svg" alt="" style="color: white">-->
+            <!--iPhone </a>-->
         </div>
     </div>
     <!--<div class="vertical-center col-sm-4">-->
-        <!--<img class="col-sm-12" src="images/mainshot_todoframe.png">-->
+    <!--<img class="col-sm-12" src="images/mainshot_todoframe.png">-->
     <!--</div>-->
     <!--<div class="col-sm-2"></div>-->
 </div>
