--- a/public/while/index.html
+++ b/public/while/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>Apdash – App Landing Page Template</title>
+    <title>RanaQuest – Whiled App, Write4me, Secret Vault, Jukebox Shoutcast</title>
     <meta name="robots" content="max-image-preview:large">
     <link rel="dns-prefetch" href="//www.google.com">
     <link rel="dns-prefetch" href="//fonts.googleapis.com">
