Removed all links to thedancho.com

--- a/public/terms.html
+++ b/public/terms.html
@@ -36,7 +36,7 @@
     <p>Phone: +91 8439740563</p>
     <p>Email to: sandeep.rana011@gmail.com</p>
 
-    <p>thedancho.com Inc. (referred to as "Secret Vault," "we," "us," "our" and other similar pronouns) makes available
+    <p>ranaq.com Inc. (referred to as "Secret Vault," "we," "us," "our" and other similar pronouns) makes available
         this Web site and all site-related services (collectively, the "Site") subject to your compliance with the terms
         and conditions set forth in this agreement (the "Agreement"). By using the Site, you agree to be bound by these
         terms and conditions. If you do not agree to these terms and conditions, you may not use the Site or any of the
@@ -98,7 +98,7 @@
     <p>10. Harvest or collect information about Site visitors or Members without their express consent; or</p>
     <p>11. Impersonate any person or entity or misrepresent your affiliation with any other person or entity.</p>
     <p><strong>II. Ownership and Restrictions on Use</strong></p>
-    <p>©1997-2013 thedancho.com Inc. All Rights Reserved. The Site is owned and operated by us in conjunction with
+    <p>©1997-2013 ranaq.com Inc. All Rights Reserved. The Site is owned and operated by us in conjunction with
         others pursuant to contractual arrangements. Unless otherwise expressly permitted by this Agreement or on the
         Site in connection with particular Site materials (for example, with respect to certain materials that may be
         expressly labeled as "free" and "shareable"), you may not copy, reproduce, republish, upload, post, transmit or
@@ -113,7 +113,7 @@
         limited basis to you by us or the owner of such Software. Title to the Software is not transferred to you. We,
         or the applicable owner, retain all right, title, and interest in and to the Software and all intellectual
         property rights therein.</p>
-    <p>"Secret Vault"; "thedancho.com"; the Secret Vault logo; "Secret Vault: Career Intelligence"; "Secret Vault, Don't
+    <p>"Secret Vault"; "ranaq.com"; the Secret Vault logo; "Secret Vault: Career Intelligence"; "Secret Vault, Don't
         climb"; "The Most Trusted Name in Career Information"; "Electronic Watercooler"; "Insider Career Network"; "The
         Workplace Network"; "Am I Worthy"; "Tools for Work"; "Secret VaultMatch"; "Secret Vault 1-Click Job Posting";
         "Recruitment and Retention" and "Career Advancement for Professionals" are trademarks and/or service marks of
@@ -178,7 +178,7 @@
     <p>Except where applicable law requires otherwise, Secret Vault does not accept returns of items or services
         purchased on the Site, such as printed Guides, downloadable Guide PDFs or gift certificates. Secret Vault also
         does not issue refunds for any products or services (or any other materials) purchased on the Site, in whole or
-        in part, including thedancho.com Gold memberships and career services (like resume reviews by an expert).</p>
+        in part, including ranaq.com Gold memberships and career services (like resume reviews by an expert).</p>
     <p><strong>Shipping and Handling</strong></p>
     <p>Shipping charges for products purchased on the Site generally vary by weight, destination and shipping option.
         After you have placed your order, we will send you an email containing your order summary. Orders placed on
@@ -296,9 +296,9 @@
     <p>If you believe in good faith that a notice of copyright infringement has been wrongly filed against you, the DMCA
         permits you to send Secret Vault a counter-notice. Notices and counter-notices must meet the then-current
         statutory requirements imposed by the DMCA; see <a href="http://www.loc.gov/copyright" target="_blank">http://www.loc.gov/copyright</a>
-        for details. Notices and counter-notices with respect to the Site should be sent to Liz Clarke, thedancho.com
+        for details. Notices and counter-notices with respect to the Site should be sent to Liz Clarke, ranaq.com
         Inc., 132 West 31st Street, 16th Floor, New York, NY 10001, (212) 366-4212 (telephone), (646) 349-9652 (fax), <a
-                href="mailto:copyright@thedancho.com">copyright@thedancho.com</a>. We suggest that you consult your
+                href="mailto:copyright@ranaq.com">copyright@ranaq.com</a>. We suggest that you consult your
         legal advisor before filing a notice or counter-notice. Also, be aware that there can be penalties for false
         claims under the DMCA.</p>
     <p><strong>X. Jurisdictional Issues</strong></p>
