--- a/public/while/privacypolicy.html
+++ b/public/while/privacypolicy.html
@@ -20,7 +20,7 @@
 
     <link rel="shortcut icon" href="/images/favicon.ico">
     <link rel="stylesheet" href="/css/main.css">
-    <link rel="canonical" href="http://www.thedancho.com/privacy/">
+    <link rel="canonical" href="http://www.ranaq.com/privacy/">
     <link rel="alternate" type="application/rss+xml" title="The Dancho" href="/feed.xml">
     <script async="" src="//www.google-analytics.com/analytics.js"></script><script src="https://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js" type="text/javascript" async=""></script><script type="text/javascript">
     WebFontConfig = {
@@ -65,17 +65,17 @@
 
                 <p>We at Company know you care about how your personal information is used and shared, and we take your privacy seriously.  Please read the following to learn more about our Privacy Policy.  <strong>By using or accessing the Services in any manner, you acknowledge that you accept the practices and policies outlined in this Privacy Policy, and you hereby consent that we will collect, use, and share your information in the following ways.</strong></p>
 
-                <p>Remember that your use of Company’s Services is at all times subject to the <a href="http://www.thedancho.com/terms.html">Terms of Use</a>, which incorporates this Privacy Policy.  Any terms we use in this Policy without defining them have the definitions given to them in the <a href="http://www.thedancho.com/terms.html">Terms of Use</a>.</p>
+                <p>Remember that your use of Company’s Services is at all times subject to the <a href="http://www.ranaq.com/terms.html">Terms of Use</a>, which incorporates this Privacy Policy.  Any terms we use in this Policy without defining them have the definitions given to them in the <a href="http://www.ranaq.com/terms.html">Terms of Use</a>.</p>
 
                 <p><strong>What does this Privacy Policy cover?</strong></p>
 
                 <p>This Privacy Policy covers our treatment of personally identifiable information (“Personal Information”) that we gather when you are accessing or using our Services, but not to the practices of companies we don’t own or control, or people that we don’t manage.  We gather various types of Personal Information from our users, as explained in more detail below, and we use this Personal Information internally in connection with our Services, including to personalize, provide, and improve our services, to allow you to set up a user account and profile, to contact you and allow other users to contact you, to fulfill your requests for certain products and services, and to analyze how you use the Services. In certain cases, we may also share some Personal Information with third parties, but only as described below.</p>
 
-                <p>As noted in the <a href="http://www.thedancho.com/terms.html">Terms of Use</a>, we do not knowingly collect or solicit personal information from anyone under the age of 13. If you are under 13, please do not attempt to register for the Services or send any personal information about yourself to us. If we learn that we have collected personal information from a child under age 13, we will delete that information as quickly as possible. If you believe that a child under 13 may have provided us personal information, please contact us at legal@thedancho.com.</p>
+                <p>As noted in the <a href="http://www.ranaq.com/terms.html">Terms of Use</a>, we do not knowingly collect or solicit personal information from anyone under the age of 13. If you are under 13, please do not attempt to register for the Services or send any personal information about yourself to us. If we learn that we have collected personal information from a child under age 13, we will delete that information as quickly as possible. If you believe that a child under 13 may have provided us personal information, please contact us at legal@ranaq.com.</p>
 
                 <p><strong>Will Company ever change this Privacy Policy?</strong></p>
 
-                <p>We’re constantly trying to improve our Services, so we may need to change this Privacy Policy from time to time as well, but we will alert you to changes by placing a notice on the thedancho.com website, by sending you an email, and/or by some other means.  Please note that if you’ve opted not to receive legal notice emails from us (or you haven’t provided us with your email address), those legal notices will still govern your use of the Services, and you are still responsible for reading and understanding them.  If you use the Services after any changes to the Privacy Policy have been posted, that means you agree to all of the changes.  Use of information we collect now is subject to the Privacy Policy in effect at the time such information is used.</p>
+                <p>We’re constantly trying to improve our Services, so we may need to change this Privacy Policy from time to time as well, but we will alert you to changes by placing a notice on the ranaq.com website, by sending you an email, and/or by some other means.  Please note that if you’ve opted not to receive legal notice emails from us (or you haven’t provided us with your email address), those legal notices will still govern your use of the Services, and you are still responsible for reading and understanding them.  If you use the Services after any changes to the Privacy Policy have been posted, that means you agree to all of the changes.  Use of information we collect now is subject to the Privacy Policy in effect at the time such information is used.</p>
 
                 <p><strong>What Information does Company Collect?</strong></p>
 
@@ -114,7 +114,7 @@
 
                 <p><em>Business Transfers:</em> We may choose to buy or sell assets.  In these types of transactions, customer information is typically one of the business assets that would be transferred.  Also, if we (or our assets) are acquired, or if we go out of business, enter bankruptcy, or go through some other change of control, Personal Information could be one of the assets transferred to or acquired by a third party.</p>
 
-                <p><em>Protection of Company and Others:</em> We reserve the right to access, read, preserve, and disclose any information that we [reasonably] believe is necessary to comply with law or court order; enforce or apply our <a href="http://www.thedancho.com/terms.html">Terms of Use</a> and other agreements; or protect the rights, property, or safety of Company, our employees, our users, or others.</p>
+                <p><em>Protection of Company and Others:</em> We reserve the right to access, read, preserve, and disclose any information that we [reasonably] believe is necessary to comply with law or court order; enforce or apply our <a href="http://www.ranaq.com/terms.html">Terms of Use</a> and other agreements; or protect the rights, property, or safety of Company, our employees, our users, or others.</p>
 
                 <p><strong>Is Personal Information about me secure?</strong></p>
 
@@ -124,18 +124,18 @@
 
                 <p><strong>What Personal Information can I access?</strong></p>
 
-                <p>Through your account settings, you may access, and, in some cases, edit or delete the information you have provided to us if you have any questions about viewing or updating information we have on file about you, please contact us at legal@thedancho.com.
-                    Under California Civil Code Sections 1798.83-1798.84, California residents are entitled to ask us for a notice identifying the categories of Personal Information which we share with our affiliates and/or third parties for marketing purposes, and providing contact information for such affiliates and/or third parties.  If you are a California resident and would like a copy of this notice, please submit a written request to: legal@thedancho.com.</p>
+                <p>Through your account settings, you may access, and, in some cases, edit or delete the information you have provided to us if you have any questions about viewing or updating information we have on file about you, please contact us at legal@ranaq.com.
+                    Under California Civil Code Sections 1798.83-1798.84, California residents are entitled to ask us for a notice identifying the categories of Personal Information which we share with our affiliates and/or third parties for marketing purposes, and providing contact information for such affiliates and/or third parties.  If you are a California resident and would like a copy of this notice, please submit a written request to: legal@ranaq.com.</p>
 
                 <p><strong>What choices do I have?</strong></p>
 
                 <p>You can always opt not to disclose information to us, but keep in mind some information may be needed to register with us or to take advantage of some of our features.</p>
 
-                <p>You may be able to add, update, or delete information as explained above.  When you update information, however, we may maintain a copy of the unrevised information in our records.  You may request deletion of your account by emailing legal@thedancho.com. Some information may remain in our records after your deletion of such information from your account. We may use any aggregated data derived from or incorporating your Personal Information after you update or delete it, but not in a manner that would identify you personally.</p>
+                <p>You may be able to add, update, or delete information as explained above.  When you update information, however, we may maintain a copy of the unrevised information in our records.  You may request deletion of your account by emailing legal@ranaq.com. Some information may remain in our records after your deletion of such information from your account. We may use any aggregated data derived from or incorporating your Personal Information after you update or delete it, but not in a manner that would identify you personally.</p>
 
                 <p><strong>What if I have questions about this policy?</strong></p>
 
-                <p>If you have any questions or concerns regarding our privacy policies, please send us a detailed message to legal@thedancho.com, and we will try to resolve your concerns.</p>
+                <p>If you have any questions or concerns regarding our privacy policies, please send us a detailed message to legal@ranaq.com, and we will try to resolve your concerns.</p>
 
 
             </div>
